--- a/.github/workflows/full-pipeline.yaml
+++ b/.github/workflows/full-pipeline.yaml
@@ -12,7 +12,9 @@ env: # Set the secret as an input
   IMAGE: ${{ github.repository_owner }}/${{ github.event.repository.name }}
   BUILD_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
   COMMIT_URL: ${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}
-  
+  KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
+  KOSLI_ORG: ${{ vars.KOSLI_ORG }}
+
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -20,6 +22,21 @@ jobs:
     steps:
       - name: Clone down repository
         uses: actions/checkout@v6       
+        - name: Setup Kosli CLI
+        uses: kosli-dev/setup-cli-action@v2
+        with:
+          version:
+            2.11.32
+      - name: Create/Update Flow
+        run: |
+          kosli create flow ${APP_NAME}-pipeline \
+            --description "CI/CD pipeline for ${APP_NAME} application" \
+            --use-empty-template
+      - name: Begin Trail
+        run: |
+          kosli begin trail ${GIT_COMMIT} \
+            --flow ${APP_NAME}-pipeline \
+            --description "Build ${BUILD_NUMBER}: ${GIT_BRANCH}"
       - name: Build application
         run: bash ci/build-app.sh
       - name: Test
