--- a/.github/workflows/full-pipeline.yaml
+++ b/.github/workflows/full-pipeline.yaml
@@ -39,8 +39,25 @@ jobs:
             --description "Build ${BUILD_NUMBER}: ${GIT_BRANCH}"
       - name: Build application
         run: bash ci/build-app.sh
+      - name: Attest application artifact
+        run: |
+          JAR_FILE=$(ls app/build/libs/app-*-all.jar)
+          kosli attest artifact ${JAR_FILE} \
+            --artifact-type file \
+            --flow ${APP_NAME}-pipeline \
+            --trail ${GIT_COMMIT} \
+            --name application \
+            --build-url ${BUILD_URL} \
+            --commit-url ${COMMIT_URL}
       - name: Test
         run: bash ci/unit-test-app.sh
+      - name: Attest JUnit test results
+        run: |
+          kosli attest junit \
+            --flow ${APP_NAME}-pipeline \
+            --trail ${GIT_COMMIT} \
+            --name application.unit-tests \
+            --results-dir app/build/test-results/test/
       - name: Upload repo
         uses: actions/upload-artifact@v5
         with: 
@@ -84,7 +101,21 @@ jobs:
       run: bash ci/build-docker.sh
     - name: push docker
       run: bash ci/push-docker.sh
-
+    - name: Setup Kosli CLI
+      uses: kosli-dev/setup-cli-action@v2
+      with:
+        version:
+          2.11.32
+    - name: Attest Docker image
+      run: |
+        IMAGE_NAME="ghcr.io/${IMAGE}:latest"
+        kosli attest artifact ${IMAGE_NAME} \
+          --artifact-type oci \
+          --flow ${APP_NAME}-pipeline \
+          --trail ${GIT_COMMIT} \
+          --name docker-image \
+          --build-url ${BUILD_URL} \
+          --commit-url ${COMMIT_URL}
     - name: Generate SBOM for the docker image
       uses: anchore/sbom-action@v0
       with:
@@ -92,6 +123,21 @@ jobs:
         format: 'spdx-json'
         output-file: 'sbom.spdx.json'
         upload-artifact: false
+           - name: Setup Kosli CLI
+     uses: kosli-dev/setup-cli-action@v2
+     with:
+       version:
+         2.11.32
+    - name: Attest SBOM
+      run: |
+        IMAGE_NAME="ghcr.io/${IMAGE}:latest"
+        kosli attest generic \
+          --flow ${APP_NAME}-pipeline \
+          --trail ${GIT_COMMIT} \
+          --name docker-image.sbom \
+          --artifact-type oci ${IMAGE_NAME} \
+          --attachments sbom.spdx.json
+
 
   Security-scan:
     runs-on: ubuntu-latest
